[package]
name = "cctop"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Live htop-style terminal monitor for Claude Code token usage"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "6"
notify = "8"
ratatui = "0.29"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

[profile.release]
opt-level = 3
lto = true
